--- a/packages/sage-react/.storybook/manager-head.html
+++ b/packages/sage-react/.storybook/manager-head.html
@@ -9,3 +9,6 @@
   type="image/png"
   href="favicon.ico"
 />
+
+<script type="module" src="http://localhost:7200/build/pds-icons.esm.js"></script>
+<script nomodule src="http://localhost:7200/build/index.esm.js"></script>
