--- a/packages/sage-react/.storybook/preview-head.html
+++ b/packages/sage-react/.storybook/preview-head.html
@@ -1,5 +1,8 @@
-<!-- Need local instance of Pine CORE running. not PINE ICONS -->
-<script type="module" src="https://localhost:7301/build/pine-core.esm.js"></script>
-<script nomodule src="https://localhost:7301/build/index.esm.js"></script>
+<!--
+  Need local instance of Pine CORE running. not PINE ICONS
+  Make sure that the port here matches what is running in your local instance.
+-->
+<script type="module" src="https://localhost:7300/build/pine-core.esm.js"></script>
+<script nomodule src="https://localhost:7300/build/index.esm.js"></script>
 
-<link rel="stylesheet" href="https://localhost:7301/build/pine-core.css" />
+<link rel="stylesheet" href="https://localhost:7300/build/pine-core.css" />
